=== Version 1.3.1 / (Date TBD)

* bug fix
  * QuitBacktraceTweaker no longer eats all paths with 'lib'
    (Tim Harper - #912)
  * Fix delegation of stubbed values on superclass class-level methods.
    (Scott Taylor - #496 - #957)

=== Version 1.3.0 / 2010-01-11

* enhancements
  * capture ExpectationNotMet error by default in matcher DSL
    * supports wrapping other expectations
  * added match_unless_raises to matcher DSL
    * supports easy wrapping of t/u assertions in matchers
    * thanks to Chad Fowler and Glenn Vanderburg for the name
  * add chain to matcher DSL (Joe Ferris - #935)
    * see rdoc for Spec::Matchers
  * and_yield provides configurable eval_context
    * Eric Meyer & David Chelimsky
  * CTRL-C actually stops execution! (Bryan Helmkamp - #911)
  * make drb port configurable (Chris Flipse - #875)
  * changed raise_error to raise_exception (#933)
    * kept raise_error aliased, so this is completely
      backwards compatible

* bug fixes
  * don't define top-level context() method when running in IRB (#899)
  * remove Ruby warning for uninitialized ivar (Bryan Helmkamp - #892)
  * fully qualify reference to Default (Alex Sharp - #895)
  * use runtime version of Test::Unit::VERSION in incompatibility message
    (Ryan Bigg - #916)
  * quote paths in RSpec's own specs so people running in paths with
    spaces in them can achieve green too (Ryan Bigg - #917)
  * ensure drb specs run when EADDRNOTAVAIL (Michael Klett - #881)
  * throw_symbol matcher correctly bubbles errors up (#918)
  * make Rakefile work without Cucumber installed (#919 - devrandom)
  * escape . in regexp (#925)
  * align be_true and be_false with Ruby's conditional semantics (#931)
  * print duplicate nested descriptions (when appropriate) (#936)

=== Version 1.2.9 / 2009-10-05

* enhancements
  * manage backtrace-ignore patterns with Spec::Runner.configure (Martin
    Emde). Closes #870.
  * friendly mock argument expectation failure message (Tim Harper). Closes
    #868.